parse/src/ast/snapshots/parse__ast__condition__tests__complex-2.snap
---
source: parse/src/ast/condition.rs
expression: node
---
LOGICAL_CONDITION_NODE@0..23
  COMPARISON_CONDITION_NODE@0..8
    BINARY_COMPARISON_NODE@0..8
      QUESTION_PARAMETER_NODE@0..4
        IDENTIFIER@0..1 "Q"
        NUMERIC_LITERAL_NODE@1..4
          NUMERIC@1..4 "123"
      WHITESPACE@4..5 " "
      EQUAL_OPERATOR_NODE@5..6
        EQUAL@5..6 "="
      WHITESPACE@6..7 " "
      NUMERIC_LITERAL_NODE@7..8
        NUMERIC@7..8 "1"
  WHITESPACE@8..9 " "
  AND_OPERATOR_NODE@9..12
    IDENTIFIER@9..12 "and"
  WHITESPACE@12..13 " "
  GROUP_CONDITION_NODE@13..23
    LEFT_PAREN@13..14 "("
    COMPARISON_CONDITION_NODE@14..22
      BINARY_COMPARISON_NODE@14..22
        QUESTION_PARAMETER_NODE@14..18
          IDENTIFIER@14..15 "Q"
          NUMERIC_LITERAL_NODE@15..18
            NUMERIC@15..18 "456"
        WHITESPACE@18..19 " "
        EQUAL_OPERATOR_NODE@19..20
          EQUAL@19..20 "="
        WHITESPACE@20..21 " "
        NUMERIC_LITERAL_NODE@21..22
          NUMERIC@21..22 "2"
    RIGHT_PAREN@22..23 ")"

