parse/src/ast/snapshots/parse__ast__condition__tests__complex-3.snap
---
source: parse/src/ast/condition.rs
expression: node
---
LOGICAL_CONDITION_NODE@0..25
  GROUP_CONDITION_NODE@0..10
    LEFT_PAREN@0..1 "("
    COMPARISON_CONDITION_NODE@1..9
      BINARY_COMPARISON_NODE@1..9
        QUESTION_PARAMETER_NODE@1..5
          IDENTIFIER@1..2 "Q"
          NUMERIC_LITERAL_NODE@2..5
            NUMERIC@2..5 "123"
        WHITESPACE@5..6 " "
        EQUAL_OPERATOR_NODE@6..7
          EQUAL@6..7 "="
        WHITESPACE@7..8 " "
        NUMERIC_LITERAL_NODE@8..9
          NUMERIC@8..9 "1"
    RIGHT_PAREN@9..10 ")"
  WHITESPACE@10..11 " "
  AND_OPERATOR_NODE@11..14
    IDENTIFIER@11..14 "and"
  WHITESPACE@14..15 " "
  GROUP_CONDITION_NODE@15..25
    LEFT_PAREN@15..16 "("
    COMPARISON_CONDITION_NODE@16..24
      BINARY_COMPARISON_NODE@16..24
        QUESTION_PARAMETER_NODE@16..20
          IDENTIFIER@16..17 "Q"
          NUMERIC_LITERAL_NODE@17..20
            NUMERIC@17..20 "456"
        WHITESPACE@20..21 " "
        EQUAL_OPERATOR_NODE@21..22
          EQUAL@21..22 "="
        WHITESPACE@22..23 " "
        NUMERIC_LITERAL_NODE@23..24
          NUMERIC@23..24 "2"
    RIGHT_PAREN@24..25 ")"

