parse/src/ast/snapshots/parse__ast__condition__tests__complex-6.snap
---
source: parse/src/ast/condition.rs
expression: node
---
LOGICAL_CONDITION_NODE@0..35
  COMPARISON_CONDITION_NODE@0..8
    BINARY_COMPARISON_NODE@0..8
      QUESTION_PARAMETER_NODE@0..4
        IDENTIFIER@0..1 "Q"
        NUMERIC_LITERAL_NODE@1..4
          NUMERIC@1..4 "123"
      WHITESPACE@4..5 " "
      EQUAL_OPERATOR_NODE@5..6
        EQUAL@5..6 "="
      WHITESPACE@6..7 " "
      NUMERIC_LITERAL_NODE@7..8
        NUMERIC@7..8 "1"
  WHITESPACE@8..9 " "
  AND_OPERATOR_NODE@9..12
    IDENTIFIER@9..12 "and"
  WHITESPACE@12..13 " "
  GROUP_CONDITION_NODE@13..35
    LEFT_PAREN@13..14 "("
    LOGICAL_CONDITION_NODE@14..34
      COMPARISON_CONDITION_NODE@14..22
        BINARY_COMPARISON_NODE@14..22
          QUESTION_PARAMETER_NODE@14..18
            IDENTIFIER@14..15 "Q"
            NUMERIC_LITERAL_NODE@15..18
              NUMERIC@15..18 "456"
          WHITESPACE@18..19 " "
          EQUAL_OPERATOR_NODE@19..20
            EQUAL@19..20 "="
          WHITESPACE@20..21 " "
          NUMERIC_LITERAL_NODE@21..22
            NUMERIC@21..22 "2"
      WHITESPACE@22..23 " "
      OR_OPERATOR_NODE@23..25
        IDENTIFIER@23..25 "or"
      WHITESPACE@25..26 " "
      COMPARISON_CONDITION_NODE@26..34
        BINARY_COMPARISON_NODE@26..34
          QUESTION_PARAMETER_NODE@26..30
            IDENTIFIER@26..27 "Q"
            NUMERIC_LITERAL_NODE@27..30
              NUMERIC@27..30 "789"
          WHITESPACE@30..31 " "
          EQUAL_OPERATOR_NODE@31..32
            EQUAL@31..32 "="
          WHITESPACE@32..33 " "
          NUMERIC_LITERAL_NODE@33..34
            NUMERIC@33..34 "3"
    RIGHT_PAREN@34..35 ")"

