parse/src/ast/snapshots/parse__ast__condition__tests__complex.snap
---
source: parse/src/ast/condition.rs
expression: node
---
LOGICAL_CONDITION_NODE@0..23
  GROUP_CONDITION_NODE@0..10
    LEFT_PAREN@0..1 "("
    COMPARISON_CONDITION_NODE@1..9
      BINARY_COMPARISON_NODE@1..9
        QUESTION_PARAMETER_NODE@1..5
          IDENTIFIER@1..2 "Q"
          NUMERIC_LITERAL_NODE@2..5
            NUMERIC@2..5 "123"
        WHITESPACE@5..6 " "
        EQUAL_OPERATOR_NODE@6..7
          EQUAL@6..7 "="
        WHITESPACE@7..8 " "
        NUMERIC_LITERAL_NODE@8..9
          NUMERIC@8..9 "1"
    RIGHT_PAREN@9..10 ")"
  WHITESPACE@10..11 " "
  AND_OPERATOR_NODE@11..14
    IDENTIFIER@11..14 "and"
  WHITESPACE@14..15 " "
  COMPARISON_CONDITION_NODE@15..23
    BINARY_COMPARISON_NODE@15..23
      QUESTION_PARAMETER_NODE@15..19
        IDENTIFIER@15..16 "Q"
        NUMERIC_LITERAL_NODE@16..19
          NUMERIC@16..19 "456"
      WHITESPACE@19..20 " "
      EQUAL_OPERATOR_NODE@20..21
        EQUAL@20..21 "="
      WHITESPACE@21..22 " "
      NUMERIC_LITERAL_NODE@22..23
        NUMERIC@22..23 "2"

